[package]
name = "carrier-signal"
version = "0.1.0"
authors = ["ModZero <modzero@modzero.xyz>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = "0.2.1"
rand = "0.7.3"
rocket = "0.4.4"
serde = { version = "1.0.111", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["tera_templates"]