[package]
name = "carrier-signal"
version = "0.1.0"
authors = ["ModZero <modzero@modzero.xyz>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = "0.2.1"
rand = "0.7.3"
tokio = { version = "0.2", features = ["full"] }

